Add javaOptions