@@ -39,7 +39,13 @@ libraryDependencies ++= Seq(
 scalacOptions ++= Seq("-feature")
 
 javaOptions in Universal ++= Seq(
-  s"-Dpidfile.path=/dev/null"
+  s"-Dpidfile.path=/dev/null",
+  "-J-XX:MaxRAMFraction=2",
+  "-J-XX:InitialRAMFraction=2",
+  "-J-XX:MaxMetaspaceSize=300m",
+  "-J-XX:+PrintGCDetails",
+  "-J-XX:+PrintGCDateStamps",
+  s"-J-Xloggc:/var/log/${packageName.value}/gc.log"
 )
 
 def env(key: String): Option[String] = Option(System.getenv(key))
